lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:3: error: Missing closing brace `}' assumed here
var sol=getSol()
^